<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp" >

        <RadioButton
            android:id="@+id/radioDriving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_driving_button" />

        <RadioButton
            android:id="@+id/radioOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_office_button" />

        <RadioButton
            android:id="@+id/radioMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_meeting_button" />

        <RadioButton
            android:id="@+id/radioCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_other_button" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/speechEnabled1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message"
        android:layout_below="@+id/message"
        android:layout_marginTop="19dp"
        android:text="@string/checkbox_text_to_speech_enabled" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/message_options"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/radio_other_text"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message"
        android:layout_centerVertical="true"
        android:text="@string/response_text_menu"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/startDriving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speechEnabled1"
        android:layout_below="@+id/speechEnabled1"
        android:layout_marginTop="42dp"
        android:text="@string/button_start_driving" />

</RelativeLayout>
